--- a/caesar's legion/media.css
+++ b/caesar's legion/media.css
@@ -17,8 +17,8 @@
 	    padding: 0;
 	}
 	.review {
-		-webkit-background-size: contain;
-		background-size: contain;
+		/*-webkit-background-size: contain;
+		background-size: cover;*/
 		background-position: center 0;
 	}
 }
