--- a/caesar's legion/style.css
+++ b/caesar's legion/style.css
@@ -1,3 +1,13 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
+*{
+	outline: none !important;
+}
 section > div, footer > div, .container, nav {
 	max-width: 1440px;
 	margin: auto;
@@ -11,15 +21,23 @@ header {
 	background-color: rgba(203, 104, 37, 0.78);
 }
 header nav{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	padding: 26px 20px 26px 30px;
 }
 header .links {
 	margin: 0 0 0 70px;
 	width: 56.3%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 header .links a {
 	color: #000000;
@@ -37,6 +55,8 @@ header .links a {
 	border: 0;
 	padding: 0 21px;
 	outline: 0 !important;
+	-webkit-transition: .3s;
+	-o-transition: .3s;
 	transition: .3s;
 	border: 3px solid transparent;
 }
@@ -54,8 +74,7 @@ footer .btn-join {
 	padding: 3px 39px;
 }
 .welcome-block {
-	background: url(img/Lovely_Fallout_New_Vegas_Skyline_1.png) 0 0 no-repeat;
-	-webkit-background-size: cover;
+	background: url(img/Lovely_Fallout_New_Vegas_Skyline_1.png) center 0 no-repeat;
 	background-size: cover;
 	text-align: center;
 	color: #faf5ca;
@@ -96,7 +115,9 @@ h4 {
 	background-color: #faf5ca;
 }
 .about-us__grid {
+	display: -ms-grid;
 	display: grid;
+	-ms-grid-columns: 1fr 10px 1fr;
 	grid-template-columns: 1fr 1fr;
 	justify-items: stretch;
 	grid-column-gap: 10px;
@@ -104,7 +125,11 @@ h4 {
   	margin: 45px 75px 0 25px;
 }
 .about-us__grid img {
-	object-fit: cover;
+	-o-object-fit: cover;
+	   object-fit: cover;
+}
+[alt="anderson"] {
+	width: 100%;
 }
 .about-us__origin {
 	margin: 27px 0 0 10px;
@@ -142,14 +167,13 @@ h4 {
 	width: 52%;
 	margin: auto;
 	font-size: 28px;
-	font-weight: 400;
 	line-height: 39.2px;
 }
 .body{
 	background-color: #7c0105;
 }
 .promo {
-	background: url(img/IMG_0441_1.svg) no-repeat;
+	background: url("img/IMG_0441 1.png") no-repeat;
 	background-size: 100% auto;
 	text-align: center;
 	color: #000;
@@ -172,8 +196,7 @@ h4 {
 	text-align: left;
 }
 .review {
-	background: url(img/IMG_0442_1.svg) 30% 0 no-repeat;
-	-webkit-background-size: cover;
+	background: url("img/IMG_0442 1.png") 30% 0 no-repeat;
 	background-size: cover;
 	color: #000;
 	padding: 89px 0 93px 0;
@@ -195,6 +218,9 @@ h4 {
 	font-weight: 400;
 	line-height: 36px;
 }
+.review h6:nth-of-type(2) {
+    line-height: .8;
+}
 .review img {
 	margin-bottom: 20px;
 }
@@ -212,6 +238,7 @@ h4 {
 .faq{
 	background-color: #faf5ca;
 	padding: 20px 0 62px;
+	max-width: 1360px;
 }
 .faq-wrapper {
 	background-color: #400707;
@@ -242,7 +269,7 @@ h4 {
 	text-align: left;
 	padding: 34px 24.1% 50px 28.9%;
 	font-family: Raleway;
-		font-size: 18px;
+	font-size: 18px;
 }
 .faq__tab .plus {
 	font-family: "IBM Plex Sans";
@@ -303,10 +330,14 @@ footer hr{
 }
 .social-media a{
 	margin-right: 80px;
+	opacity: .6;
 }
 .manager {
 	margin: 20px 0 0 43px;
-	object-fit: contain;
+	flex-shrink: 0;
+	-ms-flex-negative: 0
+	-o-object-fit: contain;
+	   object-fit: contain;
 }
 .fancybox-button--arrow_left {
 	left: 20% !important;
@@ -319,15 +350,12 @@ footer hr{
 .fancybox-button--arrow_right[disabled] {
 	opacity: .2 !important;
 }
-
-.modal {
-	/*display: inline-flex !important;
-	align-items: center;*/
-}
 .modal-dialog {
 	max-width: 665px;
 	font-family: Yanone Kaffeesatz;
-	flex-grow: 2;
+	-webkit-box-flex: 2;
+	    -ms-flex-positive: 2;
+	        flex-grow: 2;
 }
 .modal-content {
 	background: url('img/IMG_0442 1.png') no-repeat right top #FAF5CA;
@@ -352,7 +380,7 @@ footer hr{
 	background: #FAF5CA;
 	border: 1px solid #000000;
 	height: 42px;
-	width: 50%;
+	width: 100%;
 }
 .modal-body {
 	padding-top: 8px;
@@ -361,10 +389,14 @@ footer hr{
 	background: #7C0105;
 	color: #FAF5CA;
 	height: 46px;
-	margin: 13px 0 34px 0;
+	margin: 39px 0 34px 0;
+	-webkit-transition: .3s;
+	-o-transition: .3s;
 	transition: .3s;
 }
-.modal svg line {
+svg line {
+	-webkit-transition: .3s;
+	-o-transition: .3s;
 	transition: .3s;
 }
 .modal-body .btn-join:hover {
@@ -384,6 +416,11 @@ footer hr{
 	text-align: center;
 	padding: 30% 20%;
 }
+.modal-error {
+    font-size: 36px;
+    text-align: center;
+    padding: 20% 20%;
+}
 .wrapper-modal-input:after {
 	content: url('img/Group 325.svg');
 	position: absolute;
@@ -391,13 +428,13 @@ footer hr{
 .check-from {
 	position: relative;
 	top: 2em;
-	right: -8.7em;
+    left: 90%;
 }
 .warning {
 	color: #7C0105;
 	font-size: 14px;
 }
-#exampleModal2 .close {
+#modalSuccess .close, #modalError .close {
 	position: relative;
 }
 .fancybox-content {
@@ -419,4 +456,45 @@ footer hr{
 	background: #EAE4B1 !important;
 	right: 0;
 	top: 0;
+}
+.modal-form>div {
+	text-align: left;
+    margin: auto;
+    width: 50%;
+}
+.carousel {
+	margin-top: 10px;
+}
+.item .thumb {
+	cursor: pointer;
+	float: left;
+}
+.item .thumb img {
+	margin: 2px;
+}
+.item .thumb:first-of-type img {
+	margin-left: 0;
+}
+.carousel-item img {
+	width: 100%;
+	height: 500px;
+}
+.item--grid img {
+	width: 60px;
+	height: 65px;
+}
+.carousel-control-next, .carousel-control-prev {
+	width: 0;
+	opacity: 1;
+}
+.mobile-gallery--grid .carousel {
+	padding: 0 30px 0 30px;
+}
+.item--grid {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
